// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
        ╭──────────────────────────────────────────────────────────────╮        
▼ statio│                         station help                         │qs] [▾] 
 [1] ○ c│                                                              │[shell] 
 [2] - d│  Ctrl-O     open/close project view                          │[shell] 
 [3] ○ p│  Ctrl-Q     quit Station                                     │[shell] 
 [4] + s│  Ctrl-\\     split pane right                                 │[shell] 
 [5] ⠋ s│  Ctrl-^     split pane below (Ctrl-6)                        │[shell] 
        │  Ctrl-]     focus next pane                                  │        
▼ observ│  Ctrl-/     close split pane (Ctrl-_)                        │qs] [▾] 
 [6] x b│  Enter/Sp   open project view on welcome                     │[shell] 
 [7] ⠋ p│  Esc/↑↓     context menu close/move                          │[shell] 
 [8] ○ t│  Enter/Sp   context menu select                              │[shell] 
        │                     station project view                     │        
▼ script│  ↑/↓ wheel  scroll project list                              │qs] [▾] 
 [9] ○ a│  1-9/a-z    start or focus row                               │[shell] 
 [a] ? m│  N/A/R/X/C  new/add/rename/remove/fold                       │[shell] 
 [b] - o│  /, Z       search / refresh snapshot                        │[shell] 
        │  H/?        help                                             │        
▼ empty-│  Q/Esc      close/back/cancel                                │qs] [▾] 
↓ 1 hidd╰──────────────────────────────────────────────────────────────╯        
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
search: apiject - 0 worktrees                                     [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the collapse prompt 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
collapse project: 1:station 2:observer 3:scripts 4:empty-project  [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the remove slot prompt 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
remove slot: ct - 0 worktrees                                     [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the remove confirm prompt 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
confirm remove cli-help-man? Y/N                                  [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the remove session confirm prompt 1`] = `
"station
───────────────────────────────────────────────────────────────────────────────

▼ station - 5 worktrees                                           [sh] [qs] [▾]
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell]
 [2] - docs-cleanup               -         no agent                    [shell]
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell]
 [4] + session-resume             codex     starting                    [shell]
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell]

▼ observer - 3 worktrees                                          [sh] [qs] [▾]
 [6] x batch-export               opencode  exited                 #8 ✓ [shell]
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell]
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell]

▼ scripts - 3 worktrees                                           [sh] [qs] [▾]
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell]
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell]
 [b] - old-experiment             -         no agent                    [shell]

confirm remove session pty-buffer? Y/N                            [sh] [qs] [▾]
↓ 1 hidden
───────────────────────────────────────────────────────────────────────────────
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
 [9] ○ api-cache                  opencode  idle           +14 -6 #5 x1 [shell] 
 [a] ? metadata-refresh           opencode  unknown           +3 -1 #10 [shell] 
 [b] - old-experiment             -         no agent                    [shell] 
                                                                                
Choose the slot to rename: 1-9/a-z                                [sh] [qs] [▾] 
↓ 1 hidden                                                                      
─────────────────────────────────────────────────────────────────────────────── 
Q/esc:close N:new A:add Z:refresh 1-9/a-z:open X:remove /:search H:help         
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 4 worktrees                                           [sh] [qs] [▾] 
 [1] ! hook-scope             codex     Agent needs app…   +8 -2 #12 x2 [shell] 
 [2] ? metadata-refresh       codex     unknown                   +3 -1 [shell] 
 [3] ! popup-latency          codex     No progress was… +120 -44 #13 … [shell] 
 [4] ⠋ pr-info                codex     working                   #11 ✓ [shell] 
                                                                                
▼ observer - 2 worktrees                                          [sh] [qs] [▾] 
 [5] x done-run               opencode  exited                          [shell] 
 [6] ! sqlite-cleanup         opencode  Agent needs app…   +19 -2 #6 x1 [shell] 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       hook-scope|                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│                                                                              │
│ Project    station                                                           │
│ Name       station-XXXXXX                                                    │
│ Agent      codex unknown                                                     │
│                                                                              │
│ Enter:create N:name P:project A:agent Esc:cancel                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│                                                                              │
│ Project    station                                                           │
│ Name       |station-XXXXXX                                                   │
│                                                                              │
│ Enter:save   Esc:back                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
 [3] ○ pty-buffer                 codex     idle                  #73 ✓ [shell] 
 [4] + session-resume             codex     starting                    [shell] 
 [5] ⠋ station-XXXXXXy            codex     working      +412 -96 #76 … [shell] 
                                                                                
▼ observer - 3 worktrees                                          [sh] [qs] [▾] 
 [6] x batch-export               opencode  exited                 #8 ✓ [shell] 
 [7] ⠋ provider-hooks             opencode  working        +32 -8 #16 … [shell] 
 [8] ○ trace-bundle               opencode  idle             +1 -1 #4 ✓ [shell] 
                                                                                
▼ scripts - 3 worktrees                                           [sh] [qs] [▾] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"station                                                                         
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
▼ station - 5 worktrees                                           [sh] [qs] [▾] 
 [1] ○ cli-help-man               codex     idle           +14 -6 #70 ✓ [shell] 
 [2] - docs-cleanup               -         no agent                    [shell] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
